<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/userNameLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_user_name" />

        <TextView
            android:id="@+id/userNameTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:id="@+id/phoneLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_phone" />

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:id="@+id/emailLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_email" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3" />

        <TextView
            android:id="@+id/categoryLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_category" />

        <TextView
            android:id="@+id/categoryTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4" />

        <TextView
            android:id="@+id/titleLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5" />

        <TextView
            android:id="@+id/questionLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/label_question" />

        <TextView
            android:id="@+id/questionTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6" />

        <TextView
            android:id="@+id/photoLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:gravity="left|center"
            android:text="@string/label_photo" />


        <com.deitel.addressbook.TouchImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/ratingTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="8" />

        <TextView
            android:id="@+id/ratingLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/label_rating" />

        <TextView
            android:id="@+id/statusTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="9" />

        <TextView
            android:id="@+id/statusLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/label_status" />

        <TextView
            android:id="@+id/timeAskedTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="10" />

        <TextView
            android:id="@+id/timeAskedLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10"
            android:text="@string/label_time_asked" />

        <TextView
            android:id="@+id/timeClosedTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="11" />

        <TextView
            android:id="@+id/timeClosedLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="11"
            android:text="@string/label_time_closed" />

    </GridLayout>
</ScrollView>