<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/userNameTextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText0"
                android:hint="@string/hint_user_name_required"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPersonName"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText"
               android:hint="@string/hint_name_required"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPersonName"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText2"
               android:hint="@string/hint_phone"
               android:imeOptions="actionNext"
               android:inputType="phone"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText3"
               android:hint="@string/hint_email"
               android:imeOptions="actionNext"
               android:inputType="textEmailAddress"/>
         </android.support.design.widget.TextInputLayout>

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <TextView
             android:text="Category"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/categoryTextView"
             android:layout_weight="1"
             android:gravity="left|center"
             android:textSize="18sp" />

         <Spinner
             android:id="@+id/spinnerCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown" />

         </LinearLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:id="@+id/titleTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText4"
               android:hint="@string/hint_title"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText5"
               android:hint="@string/hint_question"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPostalAddress"/>
         </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <TextView
                   android:text="@string/label_photo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/photoTextView"
                   android:layout_weight="1"
                   android:textSize="18sp" />

               <Button
                   android:text="@string/label_select_photo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/btnSelectPhoto"
                   android:layout_weight="1" />


            </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_24dp" />
         </LinearLayout>
      </LinearLayout>

   </ScrollView>

   <android.support.design.widget.FloatingActionButton
      android:id="@+id/saveFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_save_24dp"/>

</FrameLayout>
