<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/loginpage"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deitel.addressbook.LoginActivity"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:id="@+id/app_icon"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="UniAsk"
        android:textColor="#3F51B5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:nextFocusDown="@+id/passWord"
        android:id="@+id/emailAddress"
        android:gravity="center"
        android:layout_below="@id/appName"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passWord"
        android:layout_below="@+id/emailAddress"
        android:hint="@string/hint_pw"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passWord"
        android:layout_marginTop="10dp"
        android:id="@+id/linear_buttons"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/LoginButtonsStyle"
            android:background="@drawable/chat_sdk_login_button_selector"
            android:id="@+id/chat_sdk_btn_login"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/LoginButtonsStyle"
            android:background="@drawable/chat_sdk_register_button_selector"
            android:id="@+id/chat_sdk_btn_register"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>